--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -15,18 +15,22 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="48dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:gravity="center"
             android:textStyle="bold"
-
+            android:background="@drawable/shape_border_red"
             android:text="@string/reset_password_by_phone"/>
         <TextView
             android:id="@+id/tvResetByEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="48dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
             android:gravity="center"
             android:textStyle="bold"
-
+            android:background="@drawable/shape_border_red"
             android:text="@string/reset_password_by_email"/>
     </LinearLayout>
 
