--- a/app/src/main/res/layout/content_web_view.xml
+++ b/app/src/main/res/layout/content_web_view.xml
@@ -79,7 +79,21 @@
                 android:layout_height="28dp"
                 android:layout_gravity="center_vertical"
                 android:layout_marginLeft="10dp"
-                android:src="@drawable/ic_star_outline_24dp"/>
+                android:src="@drawable/ic_star_outline_gray"/>
+            <ImageView
+                android:id="@+id/ivThumbup"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/thumb_up_outline_gray"/>
+            <ImageView
+                android:id="@+id/ivShare"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_gravity="center_vertical"
+                android:layout_marginLeft="10dp"
+                android:src="@drawable/ic_share_gray"/>
         </LinearLayout>
 
     </LinearLayout>
