--- a/app/src/main/res/layout/viewholder_refresh.xml
+++ b/app/src/main/res/layout/viewholder_refresh.xml
@@ -17,8 +17,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="dfdfd"
-            android:textStyle="bold"
-            android:textColor="@color/colorPrimary" />
+            android:textColor="@color/colorPrimary"
+            android:gravity="center"
+            android:drawableRight="@drawable/refresh_blue"/>
 
     </LinearLayout>
 
