--- a/app/src/main/res/drawable/shape_border_gray_bg_white.xml
+++ b/app/src/main/res/drawable/shape_border_gray_bg_white.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" >
+<!--引导页立即体验按钮使用 长圆 红底-->
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
     <!-- 实心 -->
-    <!--<solid android:color="@android:color/white" />-->
+    <solid android:color="@color/translucent_white_90" />
     <!-- 边框 -->
-    <stroke
-        android:width="0.5dp"
-        android:color="@android:color/white" />
+    <!--<stroke-->
+        <!--android:width="0.5dp"-->
+        <!--android:color="@color/translucent_white_80" />-->
     <!-- 圆角 -->
-    <corners android:radius="3dp" />
+    <corners android:radius="100dp" />
     <!-- 边距 -->
     <padding
         android:bottom="5dp"
