--- a/app/src/main/res/drawable/shape_border_red_bg_white_text.xml
+++ b/app/src/main/res/drawable/shape_border_red_bg_white_text.xml
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--imageoverlay 关注-->
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
     <!-- 实心 -->
-    <!--<solid android:color="@android:color/white" />-->
+    <solid android:color="@android:color/holo_red_light" />
     <!-- 边框 -->
-    <stroke
-        android:width="0.5dp"
-        android:color="@android:color/white" />
+    <!--<stroke-->
+        <!--android:width="0.5dp"-->
+        <!--android:color="@android:color/white" />-->
     <!-- 圆角 -->
     <corners android:radius="3dp" />
     <!-- 边距 -->
