--- a/app/src/main/res/layout/publish_popupwindow.xml
+++ b/app/src/main/res/layout/publish_popupwindow.xml
@@ -13,6 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:layout_marginBottom="10dp"
         android:orientation="vertical">
         <LinearLayout
             android:paddingBottom="30dp"
@@ -21,10 +22,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingRight="20dp"
-            android:background="#ebebeb"
+            android:background="@drawable/shape_white_bg_round_corner"
             android:paddingLeft="20dp"
             android:orientation="horizontal"
             >
+            <!--android:background="#ebebeb"-->
             <LinearLayout
                 android:id="@+id/article"
                 android:layout_width="0dp"
@@ -111,12 +113,11 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-
             android:layout_below="@+id/line"
-            android:background="#f5f3f3"
+            android:background="@drawable/shape_bg_white_round_corner"
             android:paddingBottom="20dp"
             android:paddingTop="20dp"
             android:text="取消"/>
     </LinearLayout>
-
+    <!--android:background="#f5f3f3"-->
 </RelativeLayout>
