--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -38,6 +38,15 @@
         <item name="windowNoTitle">true</item>
     </style>
 
+    <style name="ThemeFullScreen" parent="Theme.AppCompat.Light.NoActionBar">
+        <!--<item name="android:background">@mipmap/splash</item>-->
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="windowActionBar">false</item>
+        //一定要，否则有状态栏显示，不能全屏
+        <item name="windowNoTitle">true</item>
+    </style>
+
     <style name="SimpleButtonStyle" parent="AppTheme">
         <item name="android:background">@null</item>
         <item name="android:textAllCaps">true</item>
